table thead,tbody,tfoot

--- a/b_example/a02_beginner/html/table01.html
+++ b/b_example/a02_beginner/html/table01.html
@@ -204,7 +204,47 @@
 	</div>
  
   <div class="box box_05">
-  	
+  	<table summary="table의 필요성을 가계부를 작성하면서 이해해 보자">
+  		<caption>가계부 작성</caption>
+  		<thead>
+	  		<tr>
+	  			<th>번호</th>
+	  			<th>날짜</th>
+	  			<th>항목</th>
+	  			<th>수입</th>
+	  			<th>지출</th>
+	  			<th>내용</th>
+	  		</tr>
+  		</thead>
+
+			<tbody>
+	  		<tr>
+	  			<td>1</td>
+	  			<td>18.12.20</td>
+	  			<td>점심값</td>
+	  			<td>0</td>
+	  			<td>5000원</td>
+	  			<td>된장찌게</td>
+	  		</tr>  		
+	  		<tr>
+	  			<td>2</td>
+	  			<td>18.12.20</td>
+	  			<td>커피값</td>
+	  			<td>0</td>
+	  			<td>4000원</td>
+	  			<td>아메리카노,아이스 - 누구누구사줌</td>
+	  		</tr>
+			</tbody>
+			
+			<tfoot>
+	  		<tr>
+	  			<td>-</td>
+	  			<td colspan="2">최종 합계</td>
+	  			<td>0</td>
+	  			<td colspan="2">9000원</td>
+	  		</tr>
+  		</tfoot>
+  	</table>
   </div>
 	<!-- script -->
 	<!-- <script src="../js/base/jquery-3.3.1.min.js"></script> -->
