--- a/b_example/a02_beginner/html/table01.html
+++ b/b_example/a02_beginner/html/table01.html
@@ -30,7 +30,7 @@
 		border-collapse:collapse; }
 	th,td{padding:0.5rem;}
 
-	tr:first-of-type{background-color: #ccc;}
+	thead{background-color: #ccc;}
 	table, tr>th:first-of-type, tr>td:first-of-type{border-left-width:0;}
 
 	table, tr>th:last-of-type, tr>td:last-of-type{border-right-width: 0;}
@@ -235,7 +235,7 @@
 	  			<td>아메리카노,아이스 - 누구누구사줌</td>
 	  		</tr>
 			</tbody>
-			
+
 			<tfoot>
 	  		<tr>
 	  			<td>-</td>
