--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -23,6 +23,12 @@
   <ul>
     <li><a href="./html/table01.html">table_01</a></li>
   </ul>
+
+
+  <h2>form</h2>
+  <ul>
+    <li><a href="./html/form_01.html">form test</a></li>
+  </ul>
   <!-- script -->
 <script>
   // window.location = "./html/layout_test_result_02.html";
