form 기본형 이해하기

--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -28,6 +28,7 @@
   <h2>form</h2>
   <ul>
     <li><a href="./html/form_01.html">form test</a></li>
+    <li><a href="./html/form_02.html">form 내용이해1</a></li>
   </ul>
   <!-- script -->
 <script>
