html input(select기능)

--- a/b_example/a02_beginner/html/form_02.html
+++ b/b_example/a02_beginner/html/form_02.html
@@ -122,7 +122,17 @@
 						<label for="ch_05"><i></i>복습</label>
 					</div>
 
-					<div class="after"></div>
+					<div class="after">
+						
+						<label for="sel_21">수치/수량을 입력하세요.</label>
+						<input type="number" min="1" max="20" step="4" name="" id="" value="">
+
+						<label for="sel_22">원하는 값을 선택하세요.</label>
+						<input type="range" min="1" max="20" step="4" name="" id="" value="">
+
+						<label for="sel_23">색상을 선택/입력하세요</label>
+						<input type="color" name="" id="" value="">
+					</div>
 				</fieldset>
 
 				<fieldset>
