form login test 01 layout_01

--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -29,6 +29,7 @@
   <ul>
     <li><a href="./html/form_01.html">form test</a></li>
     <li><a href="./html/form_02.html">form 내용이해1</a></li>
+    <li><a href="./html/form_test_01.html">form 내용이해2-실습1</a></li>
   </ul>
   <!-- script -->
 <script>
