--- a/b_example/a02_beginner/html/form_test_01.html
+++ b/b_example/a02_beginner/html/form_test_01.html
@@ -19,7 +19,7 @@
 
 						<dl class="user">
 							<dt>
-								<label for="idname">user name</label>
+								<label for="idName"><span class="hidden">사용자 이름을 입력하세요.</span></label>
 							</dt>
 							<dd>
 								<input type="text" id="idName" name="idName" value=""
