--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- index.html -->
-<html lang="en">
+<html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
@@ -22,6 +22,7 @@
   <h2>table 이해하기</h2>
   <ul>
     <li><a href="./html/table01.html">table_01</a></li>
+    <li><a href="./html/tableTojoin_01.html">table사용 회원가입 페이지 만들기</a></li>
   </ul>
 
 
