--- a/b_example/a02_beginner/html/div_form_join_01.html
+++ b/b_example/a02_beginner/html/div_form_join_01.html
@@ -9,6 +9,27 @@
 	<title>Document</title>
 </head>
 <body>
+	<!-- layout -->
+	<div id="wrap">
+		<h1 class="hidden">회원가입 만들기</h1>
+		<h2>회원가입</h2>
+		<p class="member_info">
+			<strong class="hidden">중요</strong> 
+			<span class="hidden">표시는</span> 필수입력사항
+		</p>
+
+		<form action="">
+			<fieldset>
+				<legend class="hidden">회원가입에 필요한 상세내용 작성란</legend>
+
+			</fieldset>
+			<fieldset>
+				<legend class="hidden">회원가입내용 작성후 처리 버튼</legend>
+
+			</fieldset>
+		</form>
+	</div>
 	
+
 </body>
 </html>
