--- a/b_example/a02_beginner/index.html
+++ b/b_example/a02_beginner/index.html
@@ -31,6 +31,7 @@
     <li><a href="./html/form_01.html">form test</a></li>
     <li><a href="./html/form_02.html">form 내용이해1</a></li>
     <li><a href="./html/form_test_01.html">form 내용이해2-실습1</a></li>
+    <li><a href="./html/div_form_join_01.html">form활용한 회원가입</a></li>
   </ul>
   <!-- script -->
 <script>
