div이용한form 버튼 이미지

--- a/b_example/a02_beginner/html/div_form_join_01.html
+++ b/b_example/a02_beginner/html/div_form_join_01.html
@@ -29,7 +29,7 @@
 			<fieldset>
 				<legend class="hidden">회원가입내용 작성후 처리 버튼</legend>
 				<input type="reset" name="cancleBtn" value="다시입력" />
-				<input type="submit" name="checkSend" value="확인" />
+				<input type="submit" class="join_img" name="checkSend" value="확인" />
 			</fieldset>
 		</form>
 	</div>
