form first fieldset layout

--- a/b_example/a02_beginner/html/div_form_join_01.html
+++ b/b_example/a02_beginner/html/div_form_join_01.html
@@ -24,12 +24,53 @@
 		<form action="">
 			<fieldset>
 				<legend class="hidden">회원가입에 필요한 상세내용 작성란</legend>
-
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
+				<dl class="join_form clearfix">
+					<dt></dt>
+					<dd></dd>
+				</dl>
 			</fieldset>
 			<fieldset>
 				<legend class="hidden">회원가입내용 작성후 처리 버튼</legend>
 				<input type="reset" name="cancleBtn" value="다시입력" />
+				
 				<input type="submit" class="join_img" name="checkSend" value="확인" />
+
 			</fieldset>
 		</form>
 	</div>
