--- a/b_example/a02_beginner/html/div_form_join_01.html
+++ b/b_example/a02_beginner/html/div_form_join_01.html
@@ -25,43 +25,63 @@
 			<fieldset>
 				<legend class="hidden">회원가입에 필요한 상세내용 작성란</legend>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_01"><i class="join_img member_01"></i>아이디<i class="fas fa-asterisk"></i></label></dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt>
+						<label for="member_02">
+							<i class="join_img member_02"></i>
+
+							<span class="hidden">가입하실 회원님의 </span>
+							이름
+							<span class="hidden">을 입력하세요.</span>
+
+							<i class="fas fa-asterisk"></i>
+						</label>
+					</dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_03"><i class="join_img member_03"></i>성별<i class="fas fa-asterisk"></i></label></dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt>
+						<label for="member_04">
+							<i class="join_img member_04"></i>
+							<span class="hidden">생성하실 </span>
+							<strong>암호</strong>
+							<span class="hidden">를 입력하세요.<br />
+							암호는 최소 여덟글에서 열다섯글자 사이로 입력해야 합니다.
+							</span>
+							<i class="fas fa-asterisk"></i>
+						</label>
+					</dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_05"><i class="join_img member_05"></i>암호확인<i class="fas fa-asterisk"></i></label></dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_06"><i class="join_img member_06"></i>이메일</label></dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_07"><i class="join_img member_07"></i>주소</label></dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_08"><i class="join_img member_08"></i>휴대폰</label></dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_09"><i class="join_img member_09"></i>관심</label></dt>
 					<dd></dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt></dt>
+					<dt><label for="member_10"><i class="join_img member_10"></i>자기소개</label></dt>
 					<dd></dd>
 				</dl>
 			</fieldset>
