--- a/b_example/a02_beginner/html/div_form_join_01.html
+++ b/b_example/a02_beginner/html/div_form_join_01.html
@@ -28,7 +28,8 @@
 					<dt><label for="member_01"><i class="join_img member_01"></i>아이디<i class="fas fa-asterisk"></i></label></dt>
 					<dd>
 						<!-- input[type=text]#member_01+button[type=button]{중복확인} -->
-						<input type="text" id="member_01" name="idName" value="" class="text-box" />
+							<input type="text" id="member_01" name="idName" value="" 
+										placeholder="사용자 아이디" class="text-box" />
 						<button name="dupCheck" class="btn-check" type="button">중복확인</button>
 						<i class="duplication-check join_img"><!-- check--></i>
 					</dd>
@@ -37,19 +38,25 @@
 					<dt>
 						<label for="member_02">
 							<i class="join_img member_02"></i>
-
-							<span class="hidden">가입하실 회원님의 </span>
-							이름
+							<span class="hidden">가입하실 회원님의 </span>이름
 							<span class="hidden">을 입력하세요.</span>
-
 							<i class="fas fa-asterisk"></i>
 						</label>
 					</dt>
-					<dd></dd>
+
+					<dd>
+						<input type="text" name="userName" id="member_02" value=""  
+										placeholder="사용자의 이름" class="text-box" />
+					</dd>
 				</dl>
-				<dl class="join_form clearfix">
+				<dl class="join_form clearfix gender">
 					<dt><label for="member_03"><i class="join_img member_03"></i>성별<i class="fas fa-asterisk"></i></label></dt>
-					<dd></dd>
+					<dd>
+						<input type="radio" checked="checked" name="gender" value="" id="member_03" />
+						<label for="member_03"> <i class="join_img"></i> 남성</label>
+						<input type="radio" name="gender" value="" id="member_03-1" />
+						<label for="member_03-1"> <i class="join_img"></i> 여성</label>
+					</dd>
 				</dl>
 
 				<dl class="join_form clearfix">
