--- a/b_example/a02_beginner/html/div_form_join_01.html
+++ b/b_example/a02_beginner/html/div_form_join_01.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- div_form_join_01.html -->
-<html lang="en">
+<html lang="ko-KR">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -49,9 +49,9 @@
 										placeholder="사용자의 이름" class="text-box" />
 					</dd>
 				</dl>
-				<dl class="join_form clearfix gender">
-					<dt><label for="member_03"><i class="join_img member_03"></i>성별<i class="fas fa-asterisk"></i></label></dt>
-					<dd>
+				<dl class="join_form clearfix">
+					<dt><label for="member_03"><i class="join_img member_03"></i>성별 <span class="hidden">을 선택하세요. <br />기본은 남성입니다.</span><i class="fas fa-asterisk"></i></label></dt>
+					<dd class="gender">
 						<input type="radio" checked="checked" name="gender" value="" id="member_03" />
 						<label for="member_03"> <i class="join_img"></i> 남성</label>
 						<input type="radio" name="gender" value="" id="member_03-1" />
@@ -92,8 +92,31 @@
 					</dd>
 				</dl>
 				<dl class="join_form clearfix">
-					<dt><label for="member_06"><i class="join_img member_06"></i>이메일</label></dt>
-					<dd></dd>
+					<dt><label for="member_06"><i class="join_img member_06"></i>이메일 
+						<span class="hidden">주소를 입력하세요. <br />
+							이름과, 사이트명을 구분하였습니다. 
+							<em>기본 @는 작성되니 기입하지 않습니다.</em>
+						</span>
+						</label></dt>
+					<dd class="email">
+						<input type="text" id="member_06" name="emailFront" value=""
+									 placeholder="메일 주소"  class="text-box" />
+
+            <span aria-hidden="true">@</span>
+						<input type="text" id="member_06-1" name="emailSite" value=""
+									 placeholder="메일 사이트"  class="text-box" />
+					  <label for="member_06-1" class="hidden">@뒤에 사용하는 이메일주소의 사이트이름 작성 또는 오른쪽 항목에서 선택하세요.</label>
+
+						<!-- <input type="text" id="member_06-2" name="emailSelect" value="" class="text-box" /> -->
+					  <label for="member_06-2" class="hidden">이메일 사이트 항목을 선택하세요 없으면 왼쪽에 기입하세요.</label>
+					  <select name="emailSelect" id="member_06-2" class="text-box">
+					  	<option>메일 주소를 선택하세요.</option>
+					  	<option value="naver.com">naver.com</option>
+					  	<option value="daum.net">daum.net</option>
+					  	<option value="gmail.com">gmail.com</option>
+					  	<option value="hotmail.com">hotmail.com</option>
+					  </select>
+					</dd>
 				</dl>
 
 				<dl class="join_form clearfix">
